# open_api_spec.yaml
@@ -59,7 +59,8 @@ paths:
         - in: path
           name: vote_id
           schema:
-            type: string
+            type: integer
+            format: int64
           required: true
           description: ID of the vote to get the status of
       operationId: get_vote_status
@@ -174,11 +175,20 @@ components:
       required:
         - vote_id
         - status
+        - winner_id
+        - loser_id
       properties:
         vote_id:
-          type: string
+          type: integer
+          format: int64
         status:
           type: string
+        winner_id:
+          type: integer
+          format: int64
+        loser_id:
+          type: integer
+          format: int64
     PokemonData:
       required:
         - pokemon_id
